// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player Display it should be able to render the player view for Assign 1`] = `
<div
  data-testid="player-display"
>
  <h3>
    player.display.stage.assign.nocards.title
  </h3>
</div>
`;

exports[`Player Display it should be able to render the player view for Bullshit 1`] = `
<div
  data-testid="player-display"
>
  <div
    class="stack-y-2"
  >
    <h3>
      player.display.stage.bullshit.nocards.title
    </h3>
  </div>
</div>
`;

exports[`Player Display it should be able to render the player view for Complete 1`] = `
<div
  data-testid="player-display"
>
  <div
    class="stack-y-2"
  >
    <h3>
      Game Over Everyone
    </h3>
  </div>
</div>
`;

exports[`Player Display it should be able to render the player view for Declaration 1`] = `
<div
  data-testid="player-display"
>
  <div
    class="stack-y-2"
  >
    <h3>
      player.display.stage.declaration.title
    </h3>
    <div
      class="stack-y-2"
    >
      <h3>
        global.your_hand
      </h3>
      <div
        class="hand"
      >
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: pointer;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-2-7"
              style="background-position: -553px -246px;"
            />
          </div>
        </div>
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: pointer;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-3-8"
              style="background-position: -632px -369px;"
            />
          </div>
        </div>
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: pointer;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-1-11"
              style="background-position: -869px -123px;"
            />
          </div>
        </div>
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: pointer;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-2-0"
              style="background-position: -0px -246px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Player Display it should be able to render the player view for Flipping 1`] = `
<div
  data-testid="player-display"
>
  <div
    class="stack-y-2"
  >
    <h3>
      player.display.stage.flipping.title
    </h3>
    <div
      class="stack-y-2"
    >
      <h3>
        global.your_hand
      </h3>
      <div
        class="hand"
      >
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: auto;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-2-7"
              style="background-position: -553px -246px;"
            />
          </div>
        </div>
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: auto;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-3-8"
              style="background-position: -632px -369px;"
            />
          </div>
        </div>
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: auto;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-1-11"
              style="background-position: -869px -123px;"
            />
          </div>
        </div>
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: auto;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-2-0"
              style="background-position: -0px -246px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Player Display it should be able to render the player view for Initiation 1`] = `
<div
  data-testid="player-display"
>
  <div
    class="stack-y-2"
  >
    <h3>
      player.display.stage.initiation.title
    </h3>
  </div>
</div>
`;

exports[`Player Display it should be able to render the player view for Memorization 1`] = `
<div
  data-testid="player-display"
>
  <div
    class="stack-y-2"
  >
    <h3>
      player.display.stage.memorization.title
    </h3>
    <div
      class="stack-y-2"
    >
      <h3>
        global.your_hand
      </h3>
      <div
        class="hand"
      >
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: auto;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-2-7"
              style="background-position: -553px -246px;"
            />
          </div>
        </div>
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: auto;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-3-8"
              style="background-position: -632px -369px;"
            />
          </div>
        </div>
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: auto;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-1-11"
              style="background-position: -869px -123px;"
            />
          </div>
        </div>
        <div
          class="stack-x-4"
        >
          <div
            style="cursor: auto;"
          >
            <div
              class="flex-center-center card cardHidden"
              data-testid="card-2-0"
              style="background-position: -0px -246px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Player Display it should be able to render the player view for Memory 1`] = `
<div
  data-testid="player-display"
>
  <div
    class="stack-y-2"
  >
    <h3>
      Well which cards did you have?
    </h3>
  </div>
</div>
`;

exports[`Player Display it should be able to render the player view for Reveal 1`] = `
<div
  data-testid="player-display"
>
  <h4>
    No one called bullshit. Time to move along.
  </h4>
</div>
`;
